# try-copier

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  copier.yml  pyproject.toml
template/: README.md.jinja  pyproject.toml.jinja  {% if github_actions %}.github{{ _copier_conf.sep }}workflows{{ _copier_conf.sep }}ci.yml{% endif %}.jinja
template/src/{{project_name_kebab_case.replace('-', '_')}}/: main.py.jinja
template/{% if testing %}tests{% endif %}/: main_test.py.jinja
